<resources>
    <string name="app_name">The Smart Attic Fan App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="icon_heart">&#xf004;</string>
    <string name="icon_info">&#xf05a;</string>
    <string name="icon_gears">&#xf085;</string>
    <string name="icon_chart">&#xf201;</string>
    <string name="icon_bulb">&#xf0eb;</string>
    <string name="icon_temp">&#xf2c9;</string>
    <string name="icon_water">&#xf043;</string>
    <string name="icon_sync">&#xf021;</string>
    <string name="icon_power">&#xf0e7;</string>
    <string name="icon_time">&#xf017;</string>
    <string name="icon_add">&#xf067;</string>
    <string name="icon_email">&#xf199;</string>
    <string name="icon_check">&#xf14a;</string>
    <string name="icon_edit">&#xf044;</string>
    <string name="icon_exclamation">&#xf06a;</string>
</resources>